Injected HTML to JavaScript

--- a/src/style.css
+++ b/src/style.css
@@ -109,7 +109,7 @@ a {
 }
 .weather-forecast-temperatures {
   text-align: center;
-  color: #f65282;
+  color: #f76b8a;
   margin-top: 10px;
   display: flex;
   justify-content: center;
